<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="2">
    <TableRow android:id="@+id/row_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_manufacturer_label"
            android:text="@string/tv_manufacturer_label">
        </TextView>
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/et_manufacturer">
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/row_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_model_label"
            android:text="@string/tv_model_label">
        </TextView>
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/et_model">
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/row_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_android_version_label"
            android:text="@string/tv_android_version_label">
        </TextView>
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/et_android_version">
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/row_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_web_site_label"
            android:text="@string/tv_web_site_label">
        </TextView>
        <EditText
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            android:id="@+id/et_web_site">
        </EditText>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_web_site"
            android:text="@string/btn_web_site_label"/>
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel_label"/>
        <Button
            android:id="@+id/btn_save"
            android:text="@string/btn_save_label"/>
    </TableRow>
   </TableLayout>
